<resources>
    <string name="app_name">GeoZilla</string>
    <string name="welcome_to_geozilla">Welcome to GeoZilla</string>
    <string name="welcome_to_geozillaa">Welcome To GeoZilla</string>
    <string name="continuee">Continue</string>
    <string name="add_your_close_ones_to_the_group">Add your close ones to the group</string>
    <string name="real_time_location">Real-time location</string>
    <string name="unlimited_group_members">Unlimited group members</string>
    <string name="monitor_their_battery">Monitor their battery</string>
    <string name="welcome">Welcome</string>
    <string name="know_where_your_family_is">Know where your family is</string>
    <string name="is_and_if_they_are_safe">is and if they are safe</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="location_history">Location History</string>
    <string name="todo">TODO</string>
    <string name="suspicious_location_alerts">Suspicious location alerts</string>
    <string name="where_about_notifications">Where about notifications</string>
    <string name="receive_alerts_for_their_current_location">Receive alerts for their current location</string>
    <string name="whereabouts_notifications">Whereabouts notifications</string>
    <string name="panic_button">Panic Button</string>
    <string name="panic_buttonn">Panic Button</string>
    <string name="private_chat">Private Chat</string>
    <string name="no_ads">No Ads</string>
    <string name="email">Email</string>
    <string name="emaill">Email</string>
    <string name="welcomee">WELCOME</string>
    <string name="image">image</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_log_in_via">or Log in via</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="request_support">Request Support</string>
    <string name="enter_email_to_reset_your_password">Enter email to reset your password</string>
    <string name="send">Send</string>
    <string name="forgot_passwordd">Forgot Password</string>
    <string name="request_supportt">Request Support</string>
    <string name="people">People</string>
    <string name="places">Places</string>
    <string name="devices">Devices</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people_fragment">People Fragment</string>
    <string name="place_fragment">Place Fragment</string>
    <string name="people_screen">People Screen</string>
    <string name="place_activiy">Place Activiy</string>
    <string name="notification_screen">Notification Screen</string>
    <string name="menuscreen">Menu</string>
    <string name="work">Work</string>
    <string name="add_home">+Add Home</string>
    <string name="add_school">+Add School</string>
    <string name="add_cafe_or_restaurant">+Add Cafe or Restaurant</string>
    <string name="haris_arshad">Haris Arshad</string>
    <string name="menuu">Menu</string>
    <string name="add_homee">+ Add Home</string>
    <string name="share_location">Share Location</string>
    <string name="driving_protection">Driving Protection</string>
    <string name="fall_detection">Fall Detection</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="location">Location History</string>
    <string name="chat">Chat</string>
    <string name="menu_request_support">Request Support</string>
    <string name="settings">Settings</string>
    <string name="default_web_client_id">id_web\n</string>
    <string name="facebook_app_id">240328535809295</string>
    <string name="fb_login_protocol_scheme">9119bffd3e2fd8b2f222c1a0c1b1f1f4</string>
    <string name="facebook_client_token">TJpajuOAwfihXawix0iAqlQUh1k=</string>
    <string name="google_map_api_key">AIzaSyCVRXQ_DejnutC75ExmyhFykqL23cz0jmc</string>
    <string name="manage_members_and_circles">Manage Members And Circles</string>
    <string name="incoming_invitations">Incoming Invitations</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="map_mode">Map Mode</string>
    <string name="distance_units">Distance Units</string>
    <string name="faq">FAQ</string>
    <string name="send_feedback_report_a_bug">Send Feedback / Report a Bug</string>
    <string name="phone_model_s_limitations">Phone model\'s limitations</string>
    <string name="sign_in_with_different_account">Sign in with different account</string>
    <string name="add_place">Add Place</string>
    <string name="home">Home</string>
    <string name="school">School</string>
    <string name="gym">Gym</string>
    <string name="cafe_restaurant">Cafe / Restaurant</string>
    <string name="custom_place">Custom Place</string>
    <string name="add_a_place_to_know_when_members_come_or_go">Add a place to know when members come or go</string>
    <string name="tv_title">\n\n</string>
    <string name="tv_description">\n</string>
    <string name="add_a_new_member">Add a new member</string>
    <string name="friends">Friends</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="save">save</string>
    <string name="Save">Save</string>
    <string name="edit_place">Edit Place</string>
    <string name="add_School">+ Add School</string>
    <string name="cafe">Cafe</string>
    <string name="add_gym">+ Add Gym</string>
    <string name="battery_alerts">Battery Alerts</string>
    <string name="complete_tutorial">Complete Tutorial</string>
    <string name="location_address">Location Address</string>
    <string name="address_will_be_shown_here">Address will be shown here</string>
    <string name="adress_will_be_shown_here">Adress will be shown here</string>
    <string name="address_not_found">Address not found</string>
    <string name="be_sure_your_family_members_get">Be sure your family members get</string>
    <string name="please_invite_members_to_set">Please invite members to set</string>
    <string name="notification">notifications.</string>
    <string name="join_circle">Join Circle</string>
    <string name="user_address">user address</string>
    <string name="name">name</string>
    <string name="delete_all">Delete All</string>
    <string name="username">Username</string>
    <string name="phone_notifications">Phone Notifications:</string>
    <string name="on_arriving">On Arriving</string>
    <string name="on_leaving">On Leaving</string>
    <string name="advanced_settings">Advanced Settings:</string>
    <string name="doesntarriveby">Doesn\'t arrive by</string>
    <string name="_09_00_am">09:00 AM</string>
    <string name="_05_000_pm_06_00_pm">05:000 PM - 06:00 PM</string>
    <string name="doesn_t_leave_between">Doesn\'t leave between</string>


</resources>