<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/bottom_people"
    android:title="@string/people"
    android:icon="@drawable/baseline_group_24" />
    <item
        android:id="@+id/bottom_places"
        android:title="@string/places"
        android:icon="@drawable/baseline_add_location_24"
        />
    <item
        android:id="@+id/bottom_devices"
        android:title="@string/devices"
        android:icon="@drawable/baseline_devices_24"
        />
    <item
        android:id="@+id/bottom_Notifications"
        android:title="@string/notifications"
        android:icon="@drawable/baseline_edit_notifications_24"
        />
    <item
        android:id="@+id/bottom_menu"
        android:title="@string/menu"
        android:icon="@drawable/baseline_comment_24"
        />

</menu>