<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Settings">
    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:paddingTop="35sp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:paddingTop="18sp"
        android:text="@string/manage_members_and_circles"
        android:layout_marginTop="18sp"
        android:textSize="18sp"
        android:drawablePadding="10sp"
        app:layout_constraintTop_toBottomOf="@id/textview"
        app:drawableStartCompat="@drawable/baseline_people_24"
        app:drawableLeftCompat="@drawable/baseline_help_center_24" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/incoming_invitations"
        android:layout_marginTop="18sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:paddingTop="12sp"
        android:drawablePadding="10sp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:drawableStartCompat="@drawable/baseline_mail_24"
        app:drawableLeftCompat="@drawable/baseline_group_add_24" />
    <TextView
        android:textSize="18sp"
        android:id="@+id/textview5"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/emergency_contacts"
        android:paddingTop="18sp"
        android:layout_marginTop="18sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:drawablePadding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:drawableLeftCompat="@drawable/baseline_share_24"
        app:drawableStartCompat="@drawable/baseline_contact_emergency_24" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/battery_alerts"
        android:layout_marginTop="18sp"
        android:drawablePadding="10sp"
        android:paddingTop="12sp"
        android:paddingStart="12sp"
        android:paddingEnd="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview5"
        app:drawableLeftCompat="@drawable/baseline_drive_eta_24"
        app:drawableStartCompat="@drawable/baseline_battery_charging_full_24" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="18sp"
        android:text="@string/map_mode"
        android:drawablePadding="10sp"
        android:paddingTop="12sp"
        android:paddingStart="12sp"
        android:paddingEnd="10sp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:drawableLeftCompat="@drawable/baseline_add_to_queue_24"
        app:drawableStartCompat="@drawable/baseline_map_24" />
    <TextView
        android:textSize="18sp"
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/distance_units"
        android:layout_marginTop="18sp"
        android:drawablePadding="10sp"
        android:paddingTop="12sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:drawableLeftCompat="@drawable/baseline_report_24" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:textSize="18sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_marginTop="18sp"
        android:text="@string/faq"
        android:drawablePadding="10sp"
        android:paddingTop="12sp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:drawableLeftCompat="@drawable/baseline_location_on_24"
        app:drawableStartCompat="@drawable/baseline_help_24" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/send_feedback_report_a_bug"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:drawablePadding="10sp"
        android:layout_marginTop="18sp"
        android:paddingTop="12sp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:drawableLeftCompat="@drawable/baseline_chat_24"
        app:drawableStartCompat="@drawable/baseline_feedback_24" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:paddingStart="10sp"
        android:text="@string/phone_model_s_limitations"
        android:textSize="18sp"
        android:paddingTop="12sp"
        android:layout_marginTop="18sp"
        android:drawablePadding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:drawableLeftCompat="@drawable/baseline_help_center_24"
        tools:ignore="RtlSymmetry"
        app:drawableStartCompat="@drawable/baseline_battery_4_bar_24" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_height="40sp"
        android:text="@string/sign_in_with_different_account"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:gravity="center_horizontal"
        android:paddingTop="12sp"
        android:drawablePadding="10sp"
        android:layout_marginTop="18sp"
        android:onClick="setting"
        app:layout_constraintTop_toBottomOf="@+id/textView11"/>
</androidx.constraintlayout.widget.ConstraintLayout>