<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <TextView
        android:id="@+id/textView_bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25sp"
        android:text="@string/add_place"
        android:gravity="left"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,RtlHardcoded" />
<TextView
    android:id="@+id/hometextview"
    android:layout_width="match_parent"
    android:layout_height="50sp"
    app:layout_constraintTop_toBottomOf="@id/textView_bottomsheet"
    android:text="@string/home"
    android:layout_marginTop="15sp"
    android:textSize="15sp"
    android:paddingVertical="15sp"
    android:paddingStart="5sp"
    app:drawableStartCompat="@drawable/baseline_home_2"
    tools:ignore="RtlSymmetry">
</TextView>
    <TextView
        android:id="@+id/worktextview"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/hometextview"
        app:drawableStartCompat="@drawable/baseline_work_2"
        android:text="@string/work"
        android:paddingVertical="15sp"
        android:layout_marginTop="5sp"
        android:textSize="15sp"
        android:paddingStart="5sp"
        android:paddingEnd="2sp"
        >
    </TextView>
    <TextView
        android:id="@+id/schooltextview"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/worktextview"
        android:text="@string/school"
        android:textSize="15sp"
        android:paddingVertical="15sp"
        android:paddingStart="5sp"
        android:layout_marginTop="5sp"
        app:drawableStartCompat="@drawable/baseline_school_2"
        tools:ignore="RtlSymmetry">
    </TextView>
    <TextView
        android:id="@+id/gymtextview"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/schooltextview"
        android:text="@string/gym"
        android:textSize="15sp"
        android:paddingVertical="15sp"
        android:paddingStart="5sp"
        android:layout_marginTop="5sp"
        app:drawableStartCompat="@drawable/baseline_fitness_center_2"
        tools:ignore="RtlSymmetry">

    </TextView>
    <TextView
        android:id="@+id/cafetextview"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@+id/gymtextview"
        android:paddingStart="5sp"
        android:paddingEnd="2sp"
        android:text="@string/cafe_restaurant"
        android:textSize="15sp"
        android:paddingVertical="15sp"
        app:drawableStartCompat="@drawable/baseline_local_cafe_2">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@+id/cafetextview"
        app:drawableStartCompat="@drawable/baseline_place_24"
        android:text="@string/custom_place"
        android:textSize="15sp"
        android:paddingVertical="15sp"
        android:paddingStart="5sp"
        android:layout_marginTop="5sp"
        tools:ignore="RtlSymmetry">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

