<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addcafemain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addgym.AddGym">

    <TextView
        android:id="@+id/textview1_cafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="20sp"
        android:paddingTop="15sp"
        android:paddingEnd="20sp"
        android:text="@string/cafe"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="5sp"
        android:paddingTop="25sp"
        android:paddingEnd="5sp"
        app:drawableLeftCompat="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="editCafe"
        android:paddingTop="8sp"
        android:text="@string/edit"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/address_cafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/address_cafe"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:paddingStart="15sp"
        android:text="@string/address"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview1_cafe"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textview2cafe"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:text="@string/address_will_be_shown_here"
        android:gravity="center_vertical"
        android:drawablePadding="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="5sp"
        app:layout_constraintTop_toBottomOf="@+id/address_cafe"
        app:drawableLeftCompat="@drawable/baseline_location_on_14" />
    <TextView
        android:id="@+id/notifications_cafe"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:gravity="center_vertical"
        android:paddingStart="15sp"
        app:layout_constraintTop_toBottomOf="@id/textview2cafe"
        android:text="@string/notifications"
        android:textSize="15sp"
        android:background="@color/grey"
        tools:ignore="RtlSymmetry" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/id_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="250sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_cafe"
        app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textview3cafe"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            app:layout_constraintTop_toBottomOf="@+id/id_map"
            android:layout_marginTop="20sp"
            android:text="@string/be_sure_your_family_members_get"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/textview4cafe"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:text="@string/cafe_restaurant"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textview3cafe"

        />
         <TextView
             android:id="@+id/textview5cafe"
            android:layout_width="match_parent"
            android:layout_height="45sp"
             android:text="@string/please_invite_members_to_set"
             android:textSize="18sp"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@+id/textview4cafe"
        />
        <TextView
            android:id="@+id/textview6cafe"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:text="@string/notification"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textview5cafe"

        />

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_goneMarginBottom="75sp"
        android:text="@string/add_a_new_member"
        android:backgroundTint="@color/green"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview6cafe"
        app:layout_constraintVertical_bias="0.245" />


</androidx.constraintlayout.widget.ConstraintLayout>
