<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addworkmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addwork.AddWork">

    <TextView
        android:id="@+id/textview1_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="20sp"
        android:paddingTop="28sp"
        android:paddingEnd="20sp"
        android:text="@string/work"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="openMain8"
        android:paddingTop="8sp"
        android:paddingStart="10sp"
        android:paddingEnd="0sp"
        android:text="@string/edit"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textview1_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toEndOf="@+id/textview1_work"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/address_work"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:paddingStart="15sp"
        android:text="@string/address"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview1_work"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textview2work"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10sp"
        android:gravity="center_vertical"
        android:hint="@string/adress_will_be_shown_here"
        android:paddingStart="10sp"
        android:paddingEnd="5sp"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/baseline_location_on_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_work" />

    <TextView
        android:id="@+id/notifications_work"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:paddingStart="15sp"
        android:text="@string/notifications"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview2work"
        tools:ignore="RtlSymmetry" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/id_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="250sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_work" />

    <TextView
        android:id="@+id/texthome"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:text="@string/be_sure_your_family_members_get"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_map" />

    <TextView
        android:id="@+id/texthome1"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:gravity="center_horizontal"
        android:text="@string/home"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texthome" />

    <TextView
        android:id="@+id/texthome2"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:text="@string/please_invite_members_to_set"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texthome1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:text="@string/notification"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texthome2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/green"
        android:text="@string/add_a_new_member"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>