<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".activities.ForgotPassword">
  <TextView
      android:id="@+id/textView3"
      android:layout_width="250sp"
      android:layout_height="55sp"
      android:paddingStart="10sp"
      android:paddingEnd="0sp"
      android:text="@string/forgot_passwordd"
      android:paddingTop="8sp"
      android:textColor="@color/white"
      android:textSize="25sp"
      app:layout_constraintStart_toEndOf="@+id/textView7"
      tools:ignore="MissingConstraints,UseCompatTextViewDrawableXml"
      tools:layout_editor_absoluteY="0dp"/>
  <TextView
      android:id="@+id/textView7"
      android:layout_width="40sp"
      android:layout_height="55sp"
      android:paddingStart="5sp"
      android:paddingEnd="5sp"
      app:drawableLeftCompat="@drawable/baseline_keyboard_backspace_24"
      tools:ignore="MissingConstraints"/>
  <TextView
      android:id="@+id/textView8"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="50sp"
      android:paddingEnd="0sp"
      android:text="@string/enter_email_to_reset_your_password"
      android:textColor="@color/white"
      android:textSize="17sp"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      tools:layout_editor_absoluteX="48dp" />
    <EditText
        android:id="@+id/edittext"
        android:layout_width="330sp"
        android:layout_height="60sp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:hint="@string/emaill"
        android:drawableStart="@drawable/baseline_email_33"
        android:drawablePadding="5sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="Email"
        android:inputType="textEmailAddress"/>
  <Button
      android:id="@+id/button2"
      android:layout_width="320sp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:backgroundTint="@color/green2"
      android:text="@string/send"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/request_supportt"
      android:textColor="@color/white"
      android:textSize="18sp"
      android:paddingStart="120sp"
      android:paddingEnd="0sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button2">


  </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>